k8s/nas/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: nas
subsets:
  - addresses:
      - ip: 192.168.86.159
    ports:
      - port: 5000
