k8s/nas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  type: ClusterIP
  ports:
    - port: 5000
