k8s/nas/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nas
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("nas.staging.mchill.duckdns.org")
      kind: Rule
      services:
        - name: nas
          port: 5000
